fix(forms): Update select arrows to not overlap option text
When the text on the `option` tag is big, the arrow was overlapping it.

--- a/src/css/molecules/field.css
+++ b/src/css/molecules/field.css
@@ -2,6 +2,10 @@
 
   &-select {
 
+    .select {
+      padding-right: 1.5rem;
+    }
+
     &::after {
       right: 1.8rem;
       top: 1.2rem;
